Fixed dark mode scrollbar colors

--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -35,10 +35,10 @@ hvr -> hover
 
 @mixin colors {  
   // buttons
-  --L-a-text-hover-change: 0.8;//the number that --L-a-text gets changed by when it is hovered eg a button has 30% luminosity when left it luminosity is then timesed by 0.8 when the button is hovered
+  --L-a-text-hover-change: 0.8;
   --clr-a-text: hsl(200, 100%, var(--L-a-text));
   --clr-a-text-hvr: hsl(200, 100%, calc(var(--L-a-text) * var(--L-a-text-hover-change)));
-  --clr-buttons-main-bg: hsl(0, 0%, var(--L-buttons-main-bg));//the buttons in the main section at the top titled "download zip" "download tarbell" "veiw on github"
+  --clr-buttons-main-bg: hsl(0, 0%, var(--L-buttons-main-bg));
   --clr-buttons-main-border: hsl(0, 0%, var(--L-buttons-main-border));
   --clr-buttons-main-text: hsl(0, 0%, var(--L-buttons-main-text));
   --clr-buttons-main-text-hover: hsl(0, 6%, var(--L-buttons-main-text-hover));
@@ -55,16 +55,17 @@ hvr -> hover
   //kbd these are keyboard shortcuts eg <kbd>CMD+R</kbd>
   --clr-kbd-bg: hsl(210, 25%, var(--L-kbd-bg));
   --clr-kbd-border: hsl(212.7, 10.7%, var(--L-kbd-border));
-  --clr-kbd-border-bottom-and-shadow: hsl(210, 8.2%, var(--L-kbd-border-bottom-and-shadow));// akbd elemnts border bottom and its shadow color
+  --clr-kbd-border-bottom-and-shadow: hsl(210, 8.2%, var(--L-kbd-border-bottom-and-shadow));
   --clr-kbd-text: hsl(210, 11.7%, var(--L-kbd-text));
   // miscellaneous
   --clr-bg: hsl(0, 0%, var(--L-bg));//the bg of the page
-  --clr-splitter-blockquote-and-section: hsl(0, 0%, var(--L-splitter-blockquote-and-section));//a color for the lines that split tables, appear on the left pf blockquotes and mark new sections
-  --clr-small-in-a: hsl(0, 0%, var(--L-small-in-a));//the color for small elements in a's this color is used on the veiw on github button above the download buttons
-  --clr-table-header-and-dt: hsl(0, 0%, var(--L-table-header-and-dt)); //more info on dt's https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_dd_test
+  --clr-splitter-blockquote-and-section: hsl(0, 0%, var(--L-splitter-blockquote-and-section));
+  --clr-small-in-a: hsl(0, 0%, var(--L-small-in-a));
+  --clr-table-header-and-dt: hsl(0, 0%, var(--L-table-header-and-dt));
 }
 
 @mixin light-colors {
+  color-scheme: light;
   // buttons
   --L-a-text: 35%;
   --L-buttons-main-bg: 96%;
@@ -89,36 +90,37 @@ hvr -> hover
   --L-kbd-text: 30%;
   // miscellaneous
   --L-bg: 100%;
-  --L-splitter-blockquote-and-section: 90%;//for elements like hr + blockquote
+  --L-splitter-blockquote-and-section: 90%;
   --L-small-in-a: 47%;
-  --L-table-header-and-dt: 27%; //more on dt's https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_dd_test
+  --L-table-header-and-dt: 27%;
 }
 
 @mixin dark-colors {
-// buttons
---L-a-text: 60%;
---L-buttons-main-bg: 17%;
---L-buttons-main-border: 26%;
---L-buttons-main-text: 76%;
---L-buttons-main-text-hover: 80%;
-// headers + text
---L-h1-and-bold: 90%;
---L-h2: 83%;
---L-h-3-6: 76%;
---L-text: 70%;
-// code blocks  
---L-code-text: 80%;
---L-code-bg: 3%;
---L-code-border: 5%;
---L-code-bold-text: 100%;
-//kbd these are keyboard shortcuts eg <kbd>CMD+R</kbd>
---L-kbd-bg: 30%;
---L-kbd-border: 45%;
---L-kbd-border-bottom-and-shadow: 55%;
---L-kbd-text: 100%;
-// miscellaneous
---L-splitter-blockquote-and-section: 15%;// for elements like hr and blockquote
---L-bg: 10%;
---L-small-in-a: 60%;
---L-table-header-and-dt: 90%;
+  color-scheme: dark;
+  // buttons
+  --L-a-text: 60%;
+  --L-buttons-main-bg: 17%;
+  --L-buttons-main-border: 26%;
+  --L-buttons-main-text: 76%;
+  --L-buttons-main-text-hover: 80%;
+  // headers + text
+  --L-h1-and-bold: 90%;
+  --L-h2: 83%;
+  --L-h-3-6: 76%;
+  --L-text: 70%;
+  // code blocks  
+  --L-code-text: 80%;
+  --L-code-bg: 3%;
+  --L-code-border: 5%;
+  --L-code-bold-text: 100%;
+  //kbd these are keyboard shortcuts eg <kbd>CMD+R</kbd>
+  --L-kbd-bg: 30%;
+  --L-kbd-border: 45%;
+  --L-kbd-border-bottom-and-shadow: 55%;
+  --L-kbd-text: 100%;
+  // miscellaneous
+  --L-splitter-blockquote-and-section: 15%;
+  --L-bg: 10%;
+  --L-small-in-a: 60%;
+  --L-table-header-and-dt: 90%;
 }
